--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -243,34 +243,40 @@ body {
       color: $white;
       height: 150px;
       .news-head {
-        padding: 30px 10px 30px 30px;
+        padding: 30px 30px 0px 10px;
         text-transform: uppercase;
         font-size: 18px;
         font-weight: 500;
       }
     }
     .card-section {
-      min-height: 150px;
+      min-height: 110px;
       p {
-        padding: 4px 30px 4px 10px;
+        padding: 4px 0px 4px 10px;
 
         font-size: 18px;
         font-weight: 100;
         line-height: 1.2em;
         color: #292929;
       }
-      .card-footer {
-        margin-bottom: 0px;
-        p {
-          font-size: 12px;
-          text-align: right;
-          padding-bottom: 5px;
-          color: #818181;
-        }
+
+    }
+    .card-footer {
+      margin: 0px;
+      padding: 0px;
+
+
+      p {
+        font-size: 12px;
+        text-align: right;
+        padding-right: 0px;
+        margin: 0px 10px 10px 15px;
+
+        color: #818181;
       }
     }
-
   }
+
 }
 
 .fixed-income {
@@ -313,7 +319,7 @@ body {
   background: white;
 
   .fiduciary-title {
-    min-height: 450px;
+    min-height: 420px;
     font-size: 36px;
     font-weight: 200;
     color: #444444;
@@ -336,7 +342,7 @@ body {
     }
   }
   .fiduciary-image {
-    height: 450px;
+    min-height: 420px;
     background-image: url("/images/map.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -351,13 +357,13 @@ body {
 
   hr {
     border-bottom: 1px solid #343434;
-    margin-top: 20px;
 
   }
 
   .upper-foot {
-    padding-top: 50px;
+    padding: 50px 0px 50px 0px;
     .social-button {
+      
       ul {
         float: left;
         li {
